--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
+    "npm-check-updates": "^11.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -29,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeloy": "npm run build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "typescript": "^4.3.5"
   }
 }
